[gd_scene load_steps=2 format=3 uid="uid://drom8gtw4g5tu"]

[ext_resource type="Script" uid="uid://o4mubhnsk53p" path="res://Components/TurnBased/TurnBasedTileBasedGravityComponent.gd" id="1_81qxg"]

[node name="TurnBasedTileBasedGravityComponent" type="Node" groups=["components", "turnBased"]]
script = ExtResource("1_81qxg")

[node name="GravityTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="GravityTimer" to="." method="onGravityTimer_timeout"]
